--- a/sunlight-hours/package.json
+++ b/sunlight-hours/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "jest --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "luxon": "^2.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/luxon": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
