--- a/sunlight-hours/package.json
+++ b/sunlight-hours/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "luxon": "^2.3.2",
+    "primeflex": "^3.1.3",
+    "primevue": "^3.12.6",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
