--- a/sunlight-hours/package.json
+++ b/sunlight-hours/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "luxon": "^2.3.2",
     "primeflex": "^3.1.3",
     "primevue": "^3.12.6",
